tests/errors/lex_err06.kt
// unicode literal error
'\u1234'